--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome to Burgers</h1>
-    <p>The burgers of all time since 1984.</p>
+    <h1 class="display-4">Welcome to Burger Restaurant</h1>
+    <p>The best burgers in town since 2004.</p>
 </div>
